--- a/index.html
+++ b/index.html
@@ -9,36 +9,13 @@
 	<link rel="icon" href="https://siwei.dev/favicon.gif">
 
 	<script src="https://runtime.siwei.dev/ui/main/jquery-1.12.4.js"></script>
-
-	<link rel="stylesheet" href="https://runtime.siwei.dev/ui/console/jqconsole.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 	<div class="wrapper">
-		<div class="console-view">
-			<div class="r">
-				<div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div>
-			</div>
-			<div class="r">
-				<div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div>
-			</div>
-			<div class="r">
-				<div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div>
-			</div>
-			<div class="r">
-				<div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div>
-			</div>
-			<div class="r">
-				<div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div>
-			</div>
-			<div class="r">
-				<div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div><div class="c"></div>
-			</div>
-			<div class="alert">Not in word list</div>
-		</div>
-
+		<div class="console-view"></div>
+		<div class="alert">Not in word list</div>
 		<div class="keyboard"></div>
 
 		<div class="app-info">
