--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div class="app-info">
 			<p>This game is written in <a href="https://github.com/yjlo123/runtime-script" target="_blank">Runtime Script</a>.</p>
-			<p>View source code <a href="https://runtime.siwei.dev/?src=rundis" target="_blank">here</a>.</p>
+			<p>View source code <a href="https://github.com/yjlo123/wordle/blob/main/js/source.js" target="_blank">here</a>.</p>
 		</div>
 		<footer>
 			<small>&copy; <span id="year"></span> <a href="https://liusiwei.com/">liusiwei.com</a></small>
