--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<title>Wordle</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="https://siwei.dev/favicon.gif">
 
 	<script src="https://runtime.siwei.dev/ui/main/jquery-1.12.4.js"></script>
