--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 
 <body>
 	<div class="wrapper">
+		<div class="top-bar">
+			<div class="title left">Wordle</div>
+			<div class="key menu-key right new-game">New Game</div>
+		</div>
 		<div class="console-view"></div>
 		<div class="alert not-in-list">Not in word list</div>
 		<div class="alert result-word"></div>
 		<div class="keyboard"></div>
-		<div class="key new-game">New Game</div>
 		<div class="app-info">
 			<p>This game is written in <a href="https://github.com/yjlo123/runtime-script" target="_blank">Runtime Script</a>.</p>
 			<p>View source code <a href="https://raw.githubusercontent.com/yjlo123/wordle/main/js/source.js" target="_blank">here</a>.</p>
